Prevent overlapping borders with tabs

--- a/inst/examples/app/assets/styles.css
+++ b/inst/examples/app/assets/styles.css
@@ -26,6 +26,10 @@ body {
   font-size: 2.5rem;
 }
 
+#table {
+  margin-top: 12px;
+}
+
 .tag {
   display: inline-flex;
   padding: 0.15rem 2rem;
